[gd_scene load_steps=4 format=3 uid="uid://bsg4g2dvedkds"]

[ext_resource type="Script" path="res://scenes/house/wig.gd" id="1_indvv"]
[ext_resource type="Texture2D" uid="uid://cahogfbxxlyv4" path="res://assets/home/pokoj_babci/peruka.png" id="2_ci8ga"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pmwsq"]
radius = 47.9
height = 118.06

[node name="Wig" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_indvv")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_ci8ga")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource("CapsuleShape2D_pmwsq")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
